tests/language_modules/05_records/valid/record_literal.vf
module RecordLiteral

type Account is record
    id: Integer
    active: Boolean
end record

procedure main()
is
    let account: Account = Account { id: 1, active: true }
    check account.active
end main

end RecordLiteral