tests/language_modules/05_records/invalid_semantics/unknown_record_literal_field.vf
module UnknownRecordLiteralField

type Account is record
    id: Integer
end record

procedure main()
is
    let account: Account = Account { id: 1, active: true }
    check true
end main

end UnknownRecordLiteralField